<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>de.ingrid</groupId>
    <artifactId>ingrid-ibus-project</artifactId>
    <version>6.0.0-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>ingrid-ibus-backend</artifactId>
  <version>6.0.0-SNAPSHOT</version>
  <name>InGrid iBus Backend</name>
  <packaging>jar</packaging>

  <!-- ==================== PROPERTIES ==================== -->
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <jackson.version>2.14.1</jackson.version>
    <java.version>17</java.version>
    <elasticsearch.version>7.17.6</elasticsearch.version>
    <maven.compiler.release>17</maven.compiler.release>
  </properties>

  <!-- ==================== DEPENDENCIES ==================== -->
  <dependencies>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <!-- contains special hotfix-version, which can be removed later -->
      <version>${jackson.version}</version>
    </dependency>

    <!-- InGrid Dependencies -->
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-communication</artifactId>
      <version>6.0.0</version>
    </dependency>
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-utils</artifactId>
      <version>6.0.0</version>
      <exclusions>
        <exclusion>
          <groupId>log4j</groupId>
          <artifactId>log4j</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>jakarta.annotation</groupId>
      <artifactId>jakarta.annotation-api</artifactId>
      <version>1.3.5</version>
    </dependency>
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <version>5.0.0</version>
    </dependency>
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-iplug</artifactId>
      <version>5.3.0</version>
      <exclusions>
        <exclusion>
          <groupId>de.ingrid</groupId>
          <artifactId>ingrid-ibus</artifactId>
        </exclusion>
        <exclusion>
          <groupId>jetty</groupId>
          <artifactId>servlet-api</artifactId>
        </exclusion>
        <exclusion>
          <groupId>jetty</groupId>
          <artifactId>org.mortbay.jetty</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.springframework.security</groupId>
          <artifactId>spring-security-crypto</artifactId>
        </exclusion>
        <exclusion>
          <groupId>tomcat</groupId>
          <artifactId>jasper-runtime</artifactId>
        </exclusion>
        <exclusion>
          <groupId>tomcat</groupId>
          <artifactId>jasper-compiler</artifactId>
        </exclusion>
        <exclusion>
          <groupId>de.ingrid</groupId>
          <artifactId>ingrid-ibus-client</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-betwixt</groupId>
          <artifactId>commons-betwixt</artifactId>
        </exclusion>
        <exclusion>
          <groupId>opensymphony</groupId>
          <artifactId>quartz</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-elasticsearch-tools</artifactId>
      <version>6.0.0</version>
    </dependency>
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-codelist-service</artifactId>
      <version>6.0.0</version>
      <exclusions>
        <exclusion>
          <groupId>log4j</groupId>
          <artifactId>log4j</artifactId>
        </exclusion>
        <exclusion>
          <groupId>opensymphony</groupId>
          <artifactId>quartz</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.thoughtworks.xstream</groupId>
          <artifactId>xstream</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <!-- Elasticsearch -->
    <dependency>
      <groupId>org.elasticsearch.client</groupId>
      <artifactId>transport</artifactId>
    </dependency>

    <!-- Spring Boot Dependencies -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
      <exclusions>
        <exclusion>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jetty</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-webmvc</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-log4j2</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
      <optional>true</optional>
    </dependency>
    <!-- backward compatible -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-1.2-api</artifactId>
    </dependency>
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-ibus-frontend</artifactId>
      <version>${project.version}</version>
      <scope>runtime</scope>
    </dependency>
    <!-- does not seem to work with Spring Boot 2.1.1 -->
    <!--<dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <optional>true</optional>
    </dependency>-->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <!-- ==================== Build Configuration ==================== -->
  <build>

    <!-- dynamically add pom version to application.properties -->
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>application.properties</include>
        </includes>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.1.0</version>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>

      <!--
          Define which tests to execute
      -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <forkMode>always</forkMode>
          <redirectTestOutputToFile>false</redirectTestOutputToFile>
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <excludes>
            <exclude>**/v01/*</exclude>
            <exclude>**/v02/*</exclude>
          </excludes>
        </configuration>
      </plugin>

      <!--
          This plugin configures the git-flow for this project
      -->
      <plugin>
        <groupId>external.atlassian.jgitflow</groupId>
        <artifactId>jgitflow-maven-plugin</artifactId>
        <version>1.0-m5.1</version>
        <configuration>
          <defaultOriginUrl>https://github.com/informationgrid/ingrid-ibus</defaultOriginUrl>
          <noDeploy>true</noDeploy>
        </configuration>
      </plugin>
    </plugins>

  </build>

  <!-- ==================== Profiles ==================== -->
  <profiles>

    <profile>
      <id>development</id>
      <build>
        <resources>
          <resource>
            <directory>src/develop/resources</directory>
            <!-- We need to set filtering to true here to correctly copy files to target/classes
                 This might be a problem with multi-module projects or the usage of filtering in
                 another resource directory -->
            <filtering>true</filtering>
          </resource>
          <resource>
            <directory>src/main/resources</directory>
            <filtering>true</filtering>
            <includes>
              <include>application.properties</include>
            </includes>
          </resource>
          <resource>
            <directory>src/main/resources</directory>
          </resource>
        </resources>
      </build>
    </profile>

  </profiles>
</project>
